--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+Instructions from:
+http://vimcasts.org/episodes/synchronizing-plugins-with-git-submodules-and-pathogen/
+
 Installation:
 
     git clone git://github.com/nelstrom/dotvim.git ~/.vim
